--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -12,7 +12,7 @@ This project combines the strongest of several \textbf{open-source} components: 
 
 The above mentioned software components are well designed, with excellent interfaces and documentation. Even though this fact, \textbf{combining} them in an unique product is a \textbf{time consuming} task, which requires different type of abilities; for example, solve compilation problems with CMake or Catkin (new compilation system in ROS), to mention one.
 
-Regarding the thesis itself, \textbf{robot calibration} is an important problem to be solved in any robot, in order to allow an effective interaction with the environment. And this thesis has been focused in \textbf{multiple camera calibration}. The work has been done by experimenting with real data, real robots, real problems.
+Regarding the thesis itself, \textbf{robot calibration} is an important problem to be solved in any robot, in order to allow an effective interaction with the environment. And this thesis has been focused in \textbf{multiple camera calibration} mounted in a robot. The work has been done by experimenting with real data, real robots, real problems.
 
 Two different methods have been proposed for the \textbf{structure initialization} (3D points). Initialization used for the bundle adjustment optimizer (Ceres Solver). These methods are: solvePnP --3D points in the camera reference-- and n-view triangulation method.
 
